fix (UX Fragments): overflow in dropdown

--- a/sass/common/CardList.scss
+++ b/sass/common/CardList.scss
@@ -24,6 +24,19 @@
   position: absolute;
   top: 10px;
   right: 14px;
+
+  .dropdown-kebab-pf .dropdown-menu.dropdown-menu-right{
+    width: fit-content;
+    padding:0;
+
+    .FragmentListMenuAction__menu-item-container{
+      padding: 8px;
+
+      &:hover{
+        background-color: $color-neutral-grey;
+      }
+    }
+  }
 }
 
 .CardItemIconWrapper {
